frontend/kustomize/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbr-frontend
spec:
  selector:
    matchLabels:
      app: cbr-frontend
  template:
    metadata:
      labels:
        app: cbr-frontend
    spec:
      containers:
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:latest
        command:
          - "/cloud_sql_proxy"
          - "-instances=cbr-grabber:europe-west3:prod-instance=tcp:3306"
          - "-credential_file=/secrets/service_account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: sa-key-volume
          mountPath: /secrets/
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu:    "100m"
      volumes:
      - name: sa-key-volume
        secret:
          secretName: sa-key
