frontend/kustomize/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cbr-frontend
spec:
  tls:
  - hosts:
    - grabber.homeline.kg
    secretName: cbr-production-tls
  rules:
  - host: grabber.homeline.kg
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cbr-frontend
            port:
              number: 80
